RESOLVED FIXED218522
[WinCairo/PlayStation] ICU 68.1 no longer exposes FALSE and TRUE macros by default
https://bugs.webkit.org/show_bug.cgi?id=218522
Summary [WinCairo/PlayStation] ICU 68.1 no longer exposes FALSE and TRUE macros by de...
Stephan Szabo
Reported 2020-11-03 10:21:04 PST
ICU 68.1 has stopped defining TRUE and FALSE macros by default (you can turn it on with a define, however it's also described as deprecated in some places). Building using ICU 68.1 for WinCairo and PlayStation shows some places that fail to build without the definitions.
Attachments
Patch (8.83 KB, patch)
2020-11-03 10:25 PST, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-11-03 10:25:55 PST
EWS
Comment 2 2020-11-03 12:06:21 PST
Committed r269325: <https://trac.webkit.org/changeset/269325> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413070 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-03 12:07:23 PST
Note You need to log in before you can comment on or make changes to this bug.